# tryingCodex

./: .gitignore  README.md  SAP_RAG_ARCHITECTURE.md  pyproject.toml  rag_abap_validator.py
api/: main.py
data/: abap_internal_tables.txt  abap_select_guide.md
examples/: design.sample.json
scripts/: cli.py
src/abap_rag/: __init__.py  chunker.py  embedder.py  generator.py  loader.py  models.py  pipeline.py  retriever.py  settings.py  vector_store.py
tests/: test_chunker.py  test_generator.py  test_validator.py
