[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abap-rag-system"
version = "0.1.0"
description = "RAG system for SAP ABAP documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.28.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "sentence-transformers>=2.5.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "python-multipart>=0.0.9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
